--- a/app/views/start.html
+++ b/app/views/start.html
@@ -41,34 +41,19 @@
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>do something</li>
-        <li>update your name, address or other details</li>
-        <li>do something else</li>
+        <li>Enter your name and address </li>
+        <li>Choose your destination</li>
       </ul>
 
-      <p>Registering takes around 5 minutes.</p>
+      <p>Registering takes around 2 minutes.</p>
 
       {{ govukButton({
         text: "Start now",
-        href: "#",
+        href: "/details",
         isStartButton: true
       }) }}
 
-      <h2 class="govuk-heading-m">
-        Before you start
-      </h2>
-
-      <p>
-        You can also <a href="#">register by post</a>.
-      </p>
-
-      <p>
-        The online service is also <a href="#">available in Welsh (ar gael yn Gymraeg)</a>.
-      </p>
-
-      <p>
-        You can’t register for this service if you’re in the UK illegally.
-      </p>
+      
 
     </div>
 
