--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -23,17 +23,13 @@
       </h2>
 
       <p>
-        We've sent your application to Hackney Electoral Register Office.
+        We've sent your application.
       </p>
 
       <p>
         They will contact you either to confirm your registration, or to ask for more information.
       </p>
-      <p>
-        <a href="#">
-          What did you think of this service?
-        </a> (takes 30 seconds)
-      </p>
+    
 
 
     </div>
