--- a/app/views/check-answers.html
+++ b/app/views/check-answers.html
@@ -16,13 +16,13 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
       <h1 class="govuk-heading-xl">
-        Check your answers before sending your destination application
+        Check your answers before sending your application
       </h1>
 {{ govukSummaryList({
   rows: [
     {
       key: {
-        text: "Full Name"
+        text: "Full name"
       },
       value: {
         text: data['enter-full-name']
