--- a/app/views/details.html
+++ b/app/views/details.html
@@ -21,10 +21,10 @@
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper">
             <label class="govuk-label govuk-label--l" for="enter-full-name">
-              What is your Full Name?  
+              What is your full name?  
             </label>
           </h1>
-          <p>Enter your Full Name</p>
+          <p>Enter your full name</p>
           <input class="govuk-input" id="enter-full-name" name="enter-full-name" type="text">
           <div id="full-name-warning" class="govuk-warning-text" style="display: none;">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -38,10 +38,10 @@
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper">
             <label class="govuk-label govuk-label--l" for="enter-address">
-              What is your Address?
+              What is your address?
             </label>
           </h1>
-          <p>Enter your Address</p>
+          <p>Enter your address</p>
           <input class="govuk-input" id="enter-address" name="enter-address" type="text">
           <div id="address-warning" class="govuk-warning-text" style="display: none;">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
